# Orion-Trader

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: agent_config.py  chat.py  config.py  execution.py  market.py  proposal.py  rss.py  simulator.py  trading_settings.py  watchlist.py
backend/app/council/: __init__.py  ai_council.py  circuit_breaker.py  config.py  keys.py  market_regime.py  news_aggregator.py  retex_engine.py  schema.py
backend/app/council/utils/: openrouter.py  xai_client.py
backend/app/decision/: agents.py  committee.py  models.py  scheduler.py
backend/app/marketdata/: indicators.py  stooq.py
backend/app/rss/: service.py
backend/app/storage/: database.py
backend/tests/: test_app.py  test_market.py  test_performance_summary.py  test_rss.py
backend/tests/fixtures/: sample_rss.xml  sample_stooq.csv
docs/: ARCHITECTURE.md  DEFINITION_OF_DONE.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/committee/: page.tsx
frontend/app/council/: page.tsx
frontend/app/market/: page.tsx
frontend/app/news/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/app/proposals/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/status/: page.tsx
frontend/app/watchlist/: page.tsx
infra/scripts/: install.sh  lint.sh  run.sh
